--- a/checkout.css
+++ b/checkout.css
@@ -2,6 +2,19 @@ main {
   padding: 2% 8%;
   box-sizing: border-box;
 }
+.span-count {
+  display: flex;
+  align-items: center;
+}
+.span-count i {
+  color: #00665c;
+  cursor: pointer;
+}
+.span-count .fa-trash-alt {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
 #checkout-title {
   font-size: 36px;
   font-weight: 500;
@@ -72,6 +85,7 @@ main {
   max-width: 600px;
   padding: 16px;
   margin-bottom: 16px;
+  position: relative;
 }
 .item-title {
   font-weight: 600;
@@ -84,6 +98,9 @@ main {
   margin: 0;
   margin-top: 4px;
   margin-bottom: 4px;
+}
+.item-count {
+  margin: 0 10px;
 }
 @media (max-width: 992px) {
   #btn-place {
