--- a/checkout.css
+++ b/checkout.css
@@ -126,7 +126,7 @@ main {
     margin: 0;
     margin-top: 2px;
     margin-bottom: 2px;
-    font-size: 13px;
+    font-size: 15px;
   }
   #checkout-title {
     font-size: 30px;
@@ -139,6 +139,13 @@ main {
   .item {
     padding: 12px;
     margin-bottom: 8px;
+  }
+  .span-count i {
+    font-size: 13px;
+    margin-top: 3px;
+  }
+  .item-count {
+    margin: 0 6px;
   }
 }
 @media (max-width: 600px) {
