--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .banner-img {
   padding: 0 100px;
 }
-.slick-dots li button:before {
+#main-banner .slick-dots li button:before {
   font-size: 15px !important;
 }
 main {
@@ -28,16 +28,22 @@ body {
 }
 .item-card {
   width: 19%;
+
   box-sizing: border-box;
   box-shadow: 0 0 5px #ccc;
   background-color: #fff;
   border-radius: 5px;
   margin-left: 0.5%;
   margin-right: 0.5%;
-  transition: box-shadow linear 300ms;
+  transition: all linear 300ms;
+}
+.item-card:hover {
+  box-shadow: 0 0 10px #009688;
+  transform: scale(1.02);
 }
 .item-img {
   width: 100%;
+  height: 250px !important;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
@@ -69,6 +75,7 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
+
 @media (max-width: 992px) {
   #clothing {
     padding: 0 100px;
