--- a/success.css
+++ b/success.css
@@ -6,7 +6,11 @@
   align-items: center;
   padding-top: 4%;
 }
-
+#bg-img {
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.4;
+}
 #tick-wrapper {
   width: 200px;
   height: 200px;
