--- a/header.css
+++ b/header.css
@@ -14,6 +14,29 @@ body {
   bottom: 0;
   z-index: -11;
   filter: blur(2px);
+  animation-name: bg-move;
+  animation-duration: 4s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-fill-mode: forwards;
+  animation-direction: normal;
+}
+@keyframes bg-move {
+  0% {
+    left: -40px;
+  }
+  25% {
+    left: 0px;
+  }
+  50% {
+    left: -40px;
+  }
+  75% {
+    left: -80px;
+  }
+  100% {
+    left: -40px;
+  }
 }
 header {
   position: fixed;
